- update included physfs to 2.0.0

--- a/trunk/netpanzer/src/Lib/physfs/CMakeLists.txt
+++ b/trunk/netpanzer/src/Lib/physfs/CMakeLists.txt
@@ -6,7 +6,9 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
 
 PROJECT(PhysicsFS)
-SET(PHYSFS_VERSION 1.1.1)
+SET(PHYSFS_VERSION 2.0.0)
+
+# Increment this if/when we break backwards compatibility.
 SET(PHYSFS_SOVERSION 1)
 
 # I hate that they define "WIN32" ... we're about to move to Win64...I hope!
@@ -86,16 +88,17 @@ SET(ZLIB_SRCS
 )
 
 SET(LZMA_SRCS
-    lzma/7zBuffer.c
-    lzma/7zCrc.c
-    lzma/7zDecode.c
-    lzma/7zExtract.c
-    lzma/7zHeader.c
-    lzma/7zIn.c
-    lzma/7zItem.c
-    lzma/7zMethodID.c
-    lzma/LzmaDecode.c
-    lzma/LzmaStateDecode.c
+    lzma/C/7zCrc.c
+    lzma/C/Archive/7z/7zBuffer.c
+    lzma/C/Archive/7z/7zDecode.c
+    lzma/C/Archive/7z/7zExtract.c
+    lzma/C/Archive/7z/7zHeader.c
+    lzma/C/Archive/7z/7zIn.c
+    lzma/C/Archive/7z/7zItem.c
+    lzma/C/Archive/7z/7zMethodID.c
+    lzma/C/Compress/Branch/BranchX86.c
+    lzma/C/Compress/Branch/BranchX86_2.c
+    lzma/C/Compress/Lzma/LzmaDecode.c
 )
 
 IF(BEOS)
@@ -210,11 +213,6 @@ IF(PHYSFS_ARCHIVE_7Z)
     ADD_DEFINITIONS(-DPHYSFS_SUPPORTS_7Z=1)
     # !!! FIXME: rename to 7z.c?
     SET(PHYSFS_SRCS ${PHYSFS_SRCS} ${LZMA_SRCS})
-    INCLUDE_DIRECTORIES(lzma)
-    ADD_DEFINITIONS(-D_LZMA_IN_CB=1)
-    ADD_DEFINITIONS(-D_LZMA_PROB32=1)
-    ADD_DEFINITIONS(-D_LZMA_SYSTEM_SIZE_T=1)
-    ADD_DEFINITIONS(-D_SZ_ONE_DIRECTORY=1)
 ENDIF(PHYSFS_ARCHIVE_7Z)
 
 OPTION(PHYSFS_ARCHIVE_GRP "Enable Build Engine GRP support" TRUE)
