- NEW: added a new command to the InfoSocket 'getflag' can be used by server browsers to get the flags that the game is using. The flag request should be: '\getflag\x\' where x is the flag number. The answer will be '\flag\x\aabbccdd' where x is the flag number and aabbccdd is an array hex encoded with the flag data. The flag data array is 20x14 long and doesn't include the palette (flags are 8 bit), the requester of the flag "should" know what the pallete is. Every 2 characters of the flag data can make a flag 'byte', example:
Flag data: \flag\0\059a3f...\
 - The answer is for flag 0
 - the first 3 bytes of the flag are: 0x05, 0x9a and 0x3f


- modifed the scripts to make the windows and linux version packages.

--- a/trunk/netpanzer/SConstruct
+++ b/trunk/netpanzer/SConstruct
@@ -117,7 +117,12 @@ if 'crosslinux' in COMMAND_LINE_TARGETS:
     crosslinuxenv.Replace( CC = env['crosslinuxcompilerprefix'] + env['CC'] )
     crosslinuxenv.Replace( AR = env['crosslinuxcompilerprefix'] + env['AR'] )
     crosslinuxenv.Replace( RANLIB = env['crosslinuxcompilerprefix'] + env['RANLIB'] )
-    crosslinuxenv.Append( _LIBFLAGS = [ '`' + crosslinuxenv['CXX'] + ' -print-file-name=libstdc++.a`' ] )
+    crosslinuxenv.Append( LINKFLAGS = [ '-static-libgcc' ] )
+    #crosslinuxenv.Prepend( _LIBFLAGS = [ '-static-libgcc' ] )
+    #crosslinuxenv.Prepend( _LIBFLAGS = [ '-lstdc++' ] )
+    #crosslinuxenv.Append( _LIBFLAGS = [ '`' + crosslinuxenv['CXX'] + ' -print-file-name=libstdc++.a`' ] )
+    #crosslinuxenv.Prepend( _LIBFLAGS = [ '/usr/local/gcc/i686-linux/lib/gcc/i686-linux/4.2.4/../../../../i686-linux/lib/libstdc++.a' ] )
+    
 
 env['FINALBUILDDIR'] = 'build/' + env['mode'] + '/'
 env['FINALLIBSDIR'] = env['FINALBUILDDIR'] + 'libs/'
