- Fix: correctly disconnects players in several cases and show correct messages on disconnections. This also fixes the fake "server full" problem. - Merge little changes from newpath - Fix: if using quick connect but connection failed, it didn't exit the game automatically. - Fix: in base capture mode = full base, the capture area was too big and was possible to capture from out of the base, now is exactly the base size.

--- a/trunk/netpanzer/SConstruct
+++ b/trunk/netpanzer/SConstruct
@@ -239,6 +239,7 @@ elif thisplatform == 'win32':
     env['WINICON'] = env.RES( 'support/icon/npicon.rc' )
     SetupSpawn(env)
 else:
+    networkenv.ParseConfig(env['sdlconfig'] + ' --cflags --libs')
     env.ParseConfig(env['sdlconfig'] + ' --cflags --libs')
     env.Append( NPLIBS = [ 'SDL_mixer' ] )
 
