Added tool to convert from bmp (with the def file) to pak, make with 'scons bmp2pak'. Fixed little problem on pak2bmp if the pak path didn't have '/'. Fixed: Old netpanzer 'pack' and 'save' pak files functions was not doing the job as expected.

--- a/trunk/netpanzer/SConstruct
+++ b/trunk/netpanzer/SConstruct
@@ -249,7 +249,9 @@ env.Prepend( LIBPATH = libpath )
 netpanzer = env.Program( binpath+'netpanzer'+exeappend, env['NPSOURCES'])
 
 pak2bmp = env.Program( binpath+'pak2bmp'+exeappend, 'support/tools/pak2bmp.cpp')
-
 Alias('pak2bmp',pak2bmp)
+
+bmp2pak = env.Program( binpath+'bmp2pak'+exeappend, 'support/tools/bmp2pak.cpp')
+Alias('bmp2pak',bmp2pak)
 
 Default(netpanzer)
